added help label

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
             Please, use a browser that supports canvas
         </canvas>
         <input id="color-input" value="#FF0000" type="color">
+        <div class="help-button">
+            <i class="help-icon">?</i>
+            <p class="help-label">
+                Click in two points on the screen to draw a rectangle.
+                <br/> Press Ctrl-Z to
+                <em>undo</em> last action.
+                <br/> Select rectangles' color using the color picker in the right.
+            </p>
+        </div>
+
         <script src="lib/webgl-utils.js"></script>
         <script src="lib/webgl-debug.js"></script>
         <script src="lib/cuon-utils.js"></script>
