--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Click in two points on the screen to draw a rectangle.
                 <br/> Press Ctrl-Z to
                 <em>undo</em> last action.
-                <br/> Select rectangles' color using the color picker in the right.
+                <br/> Select rectangle color using the color picker in the right.
             </p>
         </div>
 
