fix undo, general code style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <i class="help-icon">?</i>
             <p class="help-label">
                 Click in two points on the screen to draw a rectangle.
-                <br/> Press Ctrl-Z to
+                <br/> Press Ctrl-z to
                 <em>undo</em> last action.
                 <br/> Select rectangle color using the color picker in the right.
             </p>
