--- a/index.html
+++ b/index.html
@@ -1,28 +1,18 @@
 <!doctype html>
 <html>
     <head>
-        <title>Esercizio 1</title>
+        <title>Esercitazione 1</title>
         <link rel="stylesheet" href="build/style.css">
     </head>
-    <body>
-        <canvas id="webgl-es1">
-            Please, use a browser that supports canvas
-        </canvas>
-        <input id="color-input" value="#FF0000" type="color">
-        <div class="help-button">
-            <i class="help-icon">?</i>
-            <p class="help-label">
-                Click in two points on the screen to draw a rectangle.
-                <br/> Press Ctrl-z to
-                <em>undo</em> last action.
-                <br/> Select rectangle color using the color picker in the right.
-            </p>
+    <body class="redirect">
+        <h1>Esercitazione 1</h1>
+        <div class="link-esercizi">
+            <a class="esercizio" href="esercizio1.html" title="Esercizio 1">
+                <span>Esercizio 1</span>
+            </a>
+            <a class="esercizio" href="esercizio2.html" title="Esercizio 2">
+                <span>Esercizio 2</span>
+            </a>
         </div>
-
-        <script src="lib/webgl-utils.js"></script>
-        <script src="lib/webgl-debug.js"></script>
-        <script src="lib/cuon-utils.js"></script>
-        <script src="build/index.js">
-        </script>
     </body>
 </html>
