--- a/esercizio2.html
+++ b/esercizio2.html
@@ -4,24 +4,16 @@
         <title>Esercizio 2</title>
         <link rel="stylesheet" href="build/style.css">
     </head>
-    <body>
-        <canvas id="webgl-es2">
+    <body class="es2">
+        <canvas id="webgl-es2" width="800" height="600">
             Please, use a browser that supports canvas
         </canvas>
-        <input id="color-input" value="#FF0000" type="color">
-        <div class="help-button">
-            <i class="help-icon">?</i>
-            <p class="help-label">
-                Click in two points on the screen to draw a rectangle.
-                <br/> Press Ctrl-z to
-                <em>undo</em> last action.
-                <br/> Select rectangle color using the color picker in the right.
-            </p>
-        </div>
 
         <script src="lib/webgl-utils.js"></script>
         <script src="lib/webgl-debug.js"></script>
         <script src="lib/cuon-utils.js"></script>
+        <script src="lib/cuon-matrix.js"></script>
+        <script src="lib/dat.gui.js"></script>
         <script src="build/esercizio2.js">
         </script>
     </body>
