aggiunti commenti per es1 + riferimenti al gruppo

--- a/esercizio2.html
+++ b/esercizio2.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
     <head>
+        <!-- 
+            Gruppo:
+            - Bulzoni Federico
+            - Guerra Antonio
+            - Zambello Nicola
+        -->
         <title>Esercizio 2</title>
         <link rel="stylesheet" href="build/style.css">
     </head>
     <body class="es2">
-        <canvas id="webgl-es2" width="800" height="600">
+        <canvas id="webgl-es2">
             Please, use a browser that supports canvas
         </canvas>
 
