--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html>
     <head>
+        <!-- 
+            Gruppo:
+            - Bulzoni Federico
+            - Guerra Antonio
+            - Zambello Nicola
+        -->
         <title>Esercitazione 1</title>
         <link rel="stylesheet" href="build/style.css">
     </head>
